# TextEditor-And-Paint

./: .clang-format  .gitignore  1.md  CMakeLists.txt  MyNewFile.md  README.md  compile_commands.json  flake.nix  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdown_preview_dialog.cpp  markdown_preview_dialog.h  resources.qrc  text_editor.cpp  text_editor.h  text_editor.ui
documents/: document.h  table_document.cpp  table_document.h  text_document.cpp  text_document.h
widgets/: tableedit_widget.cpp  tableedit_widget.h  tableedit_widget.ui  textedit_widget.cpp  textedit_widget.h  textedit_widget.ui  texteditwidget.cpp  texteditwidget.h
